[FIX] Translate icon is wrapped down
lp bug: https://launchpad.net/bugs/898675 fixed

bzr revid: fme@openerp.com-20111207132447-dr9jbz25gqyhcar2

--- a/addons/web/static/src/css/base.css
+++ b/addons/web/static/src/css/base.css
@@ -1061,6 +1061,7 @@ label.error {
 
 .openerp .oe_forms label.oe_label, .openerp .oe_forms label.oe_label_help {
     margin: 4px 0 0 3px;
+    white-space: nowrap;
 }
 .openerp .oe_forms .searchview_group_content label.oe_label, .openerp .searchview_group_content .oe_forms label.oe_label_help { /* making a distinction between labels in search view and other labels */
     margin: 3px 0 0 3px;
@@ -1153,9 +1154,9 @@ label.error {
 .openerp .oe_input_icon {
     position: absolute;
     cursor: pointer;
-    right: 5px;
-    top: 3px;
-    z-index: 2;
+    right: 4px;
+    top: 5px;
+    z-index: 1;
 }
 .openerp .oe_datepicker_container {
     position: absolute;
@@ -1164,7 +1165,6 @@ label.error {
     display: none;
 }
 .openerp .oe_datepicker_root {
-    position: relative;
     display: inline-block;
 }
 .openerp .oe_forms.oe_frame .oe_datepicker_root {
@@ -1177,13 +1177,6 @@ label.error {
     filter:alpha(opacity=50);
     right: 5px;
     top: 3px;
-}
-.openerp img.oe_field_translate {
-    margin-left: -21px;
-    vertical-align: top;
-    cursor: pointer;
-    position: relative;
-    top: 4px;
 }
 .openerp .oe_trad_field.touched {
     border: 1px solid green !important;
